# aiortsp

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
aiortsp/: __version__.py
aiortsp/rtcp/: __init__.py  parser.py  stats.py
aiortsp/rtp/: __init__.py
aiortsp/rtsp/: connection.py  errors.py  parser.py  reader.py  sdp.py  server.py  session.py
aiortsp/rtsp/auth/: __init__.py  base.py  basic.py  digest.py  server.py
aiortsp/rtsp/server/: __init__.py  base.py  session.py  streamer.py
aiortsp/rtsp/server/transport/: base.py  tcp.py  udp.py
aiortsp/transport/: __init__.py  base.py  tcp.py  udp.py
examples/: camera_feed.py  probe.py  rtsp_proxy.py  rtsps.py
tests/: __init__.py  test_auth.py  test_clock.py  test_connection.py  test_parser.py  test_reader.py  test_rtcp.py  test_sdp.py  test_session.py  test_transport.py
