[metadata]
name = aiortsp
description = An asyncio-based RTSP library
url = https://github.com/marss/aiortsp
author = MARSS S.A.M.
author_email = info@marss.com
long_description = file: README.rst
keywords = asyncio, rtsp
license = GNU Lesser General Public License v3 or later
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = ~=3.7

[options.packages.find]
include = aiortsp*

[mypy]
ignore_missing_imports=1
follow_imports=silent

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = doc/*,build/*,.tox,.eggs
max-complexity = 10

[tool:pytest]
addopts = -rsxX -q
testpaths = tests
